--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ropa-mini",
+  "name": "free-mini",
   "version": "1.0.0",
   "description": "WhatsApp Bot with Multi-Number Support",
   "main": "index.js",
@@ -50,6 +50,7 @@
     "baileys",
     "malvin-xd"
   ],
-  "author": "Malvin King",
+  "author": "",
   "license": "MIT"
-}
+  }
+    
