--- a/package.json
+++ b/package.json
@@ -1,34 +1,43 @@
 {
   "name": "ropa-mini",
   "version": "1.0.0",
-  "description": "WhatsApp Bot with Multi-Number Support. Also known as queen ropa mini.",
+  "description": "WhatsApp Bot with Multi-Number Support",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:angularsockets",
+    "@whiskeysockets/baileys": "npm:baileys-xdk",
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
-    "pino": "^8.17.0",
-    "jimp": "^0.16.1",
-    "mongoose": "^8.0.3",
+    "dotenv": "^16.0.0",
+    "pino": "^9.7.0",
+    "canvas": "latest",
+    "jimp": "^0.22.12",
+    "form-data":"latest",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "ffmpeg": "^0.0.4",
+    "google-tts-api": "^2.0.2",
+    "gradient-string": "^2.0.2",
+    "colors": "^1.4.0",
+    "wa-sticker-formatter": "^4.4.4",
+    "@octokit/rest": "^20.0.2",
     "child_process": "^1.0.2",
+    "crypto-digest-sync": "^1.0.0",
+    "crypto-js": "latest",
     "denethdev-ytmp3":"1.0.3",
     "cheerio": "1.1.0",
     "ruhend-scraper": "9.0.1",
     "yt-search": "2.12.1",
     "node-fetch": "3.3.2",
-    "sharp":"0.34.1",
-    "youtubedl-core": "^4.11.5",
-     "yt-search": "^2.13.1",
-    "ytdl-core": "^4.11.5",
+    "google-tts-api": "^2.0.2",
+    "sharp":"0.32.2",
     "path": "^0.12.7",
     "fs": "0.0.1-security",
     "file-type": "21.0.0",
     "axios": "^1.2.5",
-    "dotenv": "^16.4.5",
+    "qrcode": "^1.5.3",
     "moment-timezone": "^0.6.0"
   },
   "engines": {
@@ -39,9 +48,8 @@
     "bot",
     "multi-device",
     "baileys",
-    "sula-md"
+    "malvin-xd"
   ],
-  "author": "silentbyte inc",
+  "author": "Malvin King",
   "license": "MIT"
 }
-    
